Updated UI; Code refactoring