@@ -6,9 +6,8 @@ import java.util.Arrays;
 import java.util.List;
 
 public class MainApplication extends Application {
-    public ArrayList<String> enabledSounds = new ArrayList<>(Arrays.asList(
+    public List<String> enabledSounds = new ArrayList<>(Arrays.asList(
             "Fire/Smoke Alarm",
-            "Speech",
             "Door In-Use",
             "Water Running",
             "Knocking",
@@ -17,44 +16,13 @@ public class MainApplication extends Application {
             "Cat Meow",
             "Car Honk",
             "Vehicle",
-            "Baby Cry"));
+            "Baby Cry"
+    ));
 
-    //    public ArrayList<String> enabledSounds = new ArrayList<>(Arrays.asList(new String[] {
-//        "Dog Bark",
-//        "Drill",
-//        "Fire/Smoke Alarm",
-//        "Phone Ring",
-//        "Speech",
-//        "Vacuum",
-//        "Baby Cry",
-//        "Chopping",
-//        "Coughing",
-//        "Door In-Use",
-//        "Water Running",
-//        "Knocking",
-//        "Microwave",
-//        "Shaver",
-//        "Toothbrush",
-//        "Blender",
-//        "Dishwasher",
-//        "Doorbell",
-//        "Toilet Flush",
-//        "Hair Dryer",
-//        "Laughing",
-//        "Snoring",
-//        "Typing",
-//        "Hammering",
-//        "Car Honk",
-//        "Vehicle",
-//        "Saw",
-//        "Cat Meow",
-//        "Alarm Clock",
-//        "Utensils and Cutlery"
-//    }));
-    private List blockedSounds = new ArrayList();
+    private final List<Integer> blockedSounds = new ArrayList<>();
     private boolean appInForeground = false;
 
-    public List getBlockedSounds() {
+    public List<Integer> getBlockedSounds() {
         return blockedSounds;
     }
 
@@ -64,7 +32,7 @@ public class MainApplication extends Application {
 
     public void removeBlockedSounds(int soundId) {
         if (blockedSounds.contains(soundId)) {
-            this.blockedSounds.remove(new Integer(soundId));
+            this.blockedSounds.remove(Integer.valueOf(soundId));
         }
     }
 
@@ -83,15 +51,13 @@ public class MainApplication extends Application {
     }
 
     public void removeEnabledSound(String sound) {
-        if (this.enabledSounds.contains(sound)) {
-            this.enabledSounds.remove(sound);
-        }
+        this.enabledSounds.remove(sound);
     }
 
     public static int getIntegerValueOfSound(String sound){
         int i = 0;
         for (char c : sound.toCharArray())
-            i+=(int)c;
+            i += c;
         return i;
     }
 }
